Record git version in microcontroller code

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,8 +12,12 @@ AVRDUDE = avrdude
 SOURCES = $(wildcard *.c)
 OBJS = $(patsubst %.c,%.o,$(SOURCES))
 
-CFLAGS = -g -Os -Wall -Wextra -mmcu=$(MCU) -DF_CPU=$(CLOCKRATE)UL
+GIT_VERSION := $(shell git describe --dirty="M" --tags --always 2>/dev/null || echo "nogit")
+
+CFLAGS = -g -Os -Wall -Wextra -mmcu=$(MCU) -DF_CPU=$(CLOCKRATE)UL \
+		 -DVERSION=\"$(GIT_VERSION)\"
 LDFLAGS = -Os -mmcu=$(MCU)
+
 
 .SUFFIXES:
 .PRECIOUS: %.o %.elf
